Fixed next and previous buttons overflow on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -228,7 +228,7 @@ img{
 
 .footer-container{
   background-color: rgb(73, 73, 73);
-  height:150px;
+  height:50px;
 }
 
 /******************************************
@@ -339,8 +339,11 @@ a{
 }
 
 
-@media screen and (max-width:400px){
+@media screen and (max-width:500px){
   .change-day-text{
     display:none;
+  }
+  .button{
+    width: 50px;
   }
 }
